Fixed odd alignment in mobile versions

--- a/css/main.css
+++ b/css/main.css
@@ -27,10 +27,7 @@ header {
 .logo img {
   vertical-align: middle;
   border-radius: 0 50px 50px 0;
-}
-
-.name {
-  padding-left: 40px;
+  margin-right: 40px;
 }
 
 header nav {
